methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:10: error: type mismatch;
 found   : Unit
 required: Boolean
      if(bis=0){
            ^